# swarms-rs

./: .env.example  .gitignore  AGENT_INITIALIZATION_PERFORMANCE_ANALYSIS.md  Cargo.toml  Dockerfile  README.ja.md  README.md  README.zh.md  _typos.toml  build.sh  deny.toml  engram_encoder.pth  example.py  pyproject.toml  rl_agent.pth  test.py  test6.py  test_5.py  world_site.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  dependency-update.yml  docs.yml  format.yml  generator-generic-ossf-slsa3-publish.yml  performance.yml  release.yml  security.yml
docs/: ANTHROPIC_README.md  AUTONOMOUS_TESTING_GUIDE.md  README.zh.md  header.html
examples/: README.md  agent_example.rs  demo.rs  modelcall.rs  simple_swarms_agent.rs  swarm_router.rs
examples/binance-swarms-agent/: .env.example  Cargo.toml  README.md
examples/binance-swarms-agent/src/: main.rs
examples/binance-tools/: Cargo.toml  README.md
examples/binance-tools/src/: auth.rs  main.rs  mcp_tools.rs
examples/binance-tools/src/api/: mod.rs
examples/binance-tools/src/api/market_data/: README.md  agg_trades.rs  avg_price.rs  depth.rs  historical_trades.rs  klines.rs  mod.rs  ticker_24hr.rs  ticker_book_ticker.rs  ticker_price.rs  ticker_rolling_window_price.rs  ticker_trading_day.rs  trades.rs  ui_klines.rs
examples/browser-use/: .env.example  Cargo.toml  README.md
examples/browser-use/src/: main.rs
examples/fetch-mcp/: .env.example  Cargo.toml
examples/fetch-mcp/src/: main.rs
examples/knowledge-graph-memory-server/: .env.example  Cargo.toml
examples/knowledge-graph-memory-server/src/: main.rs
experimental/: old_lib.rs
scripts/: build_docs.sh  debug_autonomous_tests.sh  format.sh  run_example.sh  startup.sh  update_patterns.sh  validate_autonomous_tests.sh
src/: agent.rs  lib.rs
swarms-macro/: Cargo.toml  README.md
swarms-macro/src/: lib.rs  tool.rs
swarms-rs/: Cargo.toml  LOGGING.md  README.md  clippy.toml  format_code.sh  publish.sh  rustfmt.toml  startup.sh
swarms-rs/benches/: agent_initialization_benchmarks.rs  concurrent_workflow_benchmarks.rs  graph_workflow_benchmarks.rs
swarms-rs/examples/: anthropic_claude_agent.rs  batch_executor_example.rs  benchmark.rs  concurrent_demo.rs  concurrent_workflow_run.rs  concurrent_workflow_run_batch.rs  example.rs  financial_analysis_swarm.rs  gold_etf_analysis.rs  logging_example.rs  mcp_tool.rs  sequential_workflow.rs  simple_agent.rs  simple_swarms_agent.rs  swarm_router.rs  swarms_coin_agent.rs  test_concurrent.rs  test_meme_agent_generator.rs  test_tree_agent.rs  tool.rs
swarms-rs/examples/multiple_agent/: agent_rearrange_example.rs  concurrent_workflow_run_batch.rs  graph_workflow.rs  sequential_workflow.rs  swarm_router.rs
swarms-rs/examples/single_agent/: logging_example.rs  pretty_print_example.rs  tool.rs
swarms-rs/src/: agent.rs  conversation.rs  lib.rs  llm.rs  logging.rs  persistence.rs  tool.rs
swarms-rs/src/agent/: mod.rs  swarms_agent.rs  tree_agent.rs
swarms-rs/src/llm/: completion.rs  request.rs
swarms-rs/src/llm/provider/: anthropic.rs  openai.rs
swarms-rs/src/prompts/: mod.rs  multi_agent_collab_prompt.rs  multi_agent_collab_prompt_new.rs
swarms-rs/src/structs/: agent.rs  concurrent_exec.rs  concurrent_workflow.rs  conversation.rs  execute_agent_batch.rs  graph_workflow.rs  meme_agent_generator.rs  mod.rs  persistence.rs  rearrange.rs  sequential_workflow.rs  swarm.rs  swarms_client.rs  swarms_router.rs  tool.rs  utils.rs
swarms-rs/tests/: anthropic_tests.rs  autonomous_config.rs  example_test.rs  persistence_tests.rs  test_agent_config.rs  test_batch_executor.rs  test_concurrent_workflow.rs  test_conversation.rs  test_conversation_comprehensive.rs  test_coverage_analysis.rs  test_graphworkflow.rs  test_integration_scaffolding.rs  test_logger.rs  test_rearrange.rs  test_security_safety.rs  test_sequential_workflow.rs  test_suite_health.rs  test_swarm_router.rs  test_swarm_structures.rs  test_tool_simple.rs  test_utils.rs
