[package]
name = "swarms_rust"
version = "0.1.2"
edition = "2021"

[lib]
name = "swarms_rust"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
threadpool = "1.8"
num_cpus = "1.13"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
dotenv = "0.15"
serde_json = "1.0"
anyhow = "1.0"
