[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"

[project]
name = "swarms-rust"
version = "0.1.2"
description = "A Rust-powered Python extension for concurrency, file I/O, and async API requests."
readme = "README.md"
authors = [
    { name = "Kye Gomez", email = "kye@kyegomez.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10,<4.0"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
bindings = "pyo3"
module-name = "swarms_rust"
