[package]
name = "swarms-macro"
version = "0.1.1"
edition = "2024"
description = "Procedural macros for the swarms-rs framework"
license = "Apache-2.0"
repository = "https://github.com/The-Swarm-Corporation/swarms-rs"
documentation = "https://docs.rs/swarms-macro"
readme = "README.md"
keywords = ["ai", "agents", "swarms", "macro", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
schemars = { version = "0.8", features = ["derive"] }
