[package]
name = "swarms-rs"
version = "0.2.1"
edition = "2024"
description = "The Bleeding-Edge Production-Ready Multi-Agent Orchestration Framework in Rust"
authors = ["Kye Gomez <kye@swarms.world>"]
license = "Apache-2.0"
repository = "https://github.com/The-Swarm-Corporation/swarms-rs"
documentation = "https://docs.rs/swarms-rs"
readme = "README.md"
keywords = ["ai", "agents", "swarms", "multi-agent", "llm"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dashmap = { version = "6", features = ["serde"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.4"
futures = "0.3"
uuid = { version = "1.15", features = ["v4", "serde"] }
url = "2.5"
tokio-rustls = "0.26.2"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twox-hash = "2.1"
zstd = "0.13.3"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
tabled = "0.20"
petgraph = { version = "0.7", default-features = false, features = [
    "stable_graph",
] }
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "multipart",
    "rustls-tls-native-roots",
], default-features = false }
async-openai = { version = "0.28", features = ["byot"] }
rmcp = { version = "0.1.5", features = [
    "client",
    "transport-sse",
    "transport-child-process",
] }
hyper = { version = "1.0", features = ["http1", "client", "server"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1"] }
hyper-tls = "0.6"
bytes = "1.0"
http-body-util = "0.1"
webpki-roots = "0.26"

# macro
swarms-macro = { version = "0.1.0", path = "../swarms-macro" }

[dev-dependencies]
anyhow = "1"
tempfile = "3.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing"] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mockall = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }
ctor = "0.2"

[[bench]]
name = "concurrent_workflow_benchmarks"
harness = false

[[bench]]
name = "graph_workflow_benchmarks"
harness = false

[[bench]]
name = "agent_initialization_benchmarks"
harness = false


[[example]]
name = "logging_example"
path = "examples/logging_example.rs"

[[example]]
name = "anthropic_claude_agent"
path = "examples/anthropic_claude_agent.rs"

[[example]]
name = "gold_etf_analysis"
path = "examples/gold_etf_analysis.rs"

[[example]]
name = "swarm_router"
path = "examples/swarm_router.rs"

[[example]]
name = "pretty_print_example"
path = "examples/pretty_print_example.rs"
