[package]
name = "binance-tools"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "server",
    "macros",
    "transport-io",
    "transport-sse-server",
] }
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20", features = ["derive"] }


# auth
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# http client
reqwest = { version = "0.12", features = ["json"] }
